# yault-convergence-hackathon

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_COST_ESTIMATE.md  Dockerfile  LICENSE  README.md  Yault_Guardian_Vault_Presentation.pptx  babel.config.cjs  docker-compose.yml  eslint.config.mjs  fly.toml  jest.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
client/: package.json
client/release/: arweave-nft.js  authority-crypto.js  device-recovery.js  index.js  notifications.js  path-manager.js  recipient-activation.js  tlock.js
contracts/: foundry.toml  package.json
contracts/script/: CreateWethVault.s.sol  Deploy.s.sol  DeployAdminFactorVault.s.sol  DeployChainlinkIntegrations.s.sol  (+6 more)
docs/: DEPLOYMENT.md  LAUNCH_PLAN.md  affiliate-sub-vault-model.md  multi-protocol-yield-strategy.md  security-audit-report-gpt.md  security-audit-report.md  yield-strategy-and-affiliate-model.md
env/: development.json  local.json  production.json  test.json
oracle/: README.md
scripts/: backfill-plan-id.js  browser-fetch-stub.mjs  build-rwa-adapter.mjs  check-contract-config.js  demo-preflight.sh  dump-plan-data.js  generate-env.mjs  generate-ppt.py  run-with-env.js  rwa-adapter-entry.mjs  test-usdc-balance.js
server/: db-postgres.js  db-sqlite.js  db.js  index.js  package.json
wasm-core/: Cargo.toml
wasm-core/src/: lib.rs
wasm-core/src/custody/: admin_factor.rs  blob_amount.rs  e2e_crypto.rs  mod.rs  recipient_path.rs  shamir.rs  wasm_exports.rs
wasm-core/tests/: admin_factor_test.rs  shamir_test.rs
webapp/: README.md  package.json
(+184 files in other folders)
